# blikvangers_mission_2026

./: .env.example  .gitignore  README.md  pyproject.toml
.mpl/: fontlist-v390.json
bridge/: .env.example  README.md
config/: bno055_calibration.default.json  bno055_calibration.example.json
config/camera/: tag_registry.json
config/gimbal/: servo_calibration.example.json  servo_calibration.json
deploy/systemd/: cansat-radio-protocol.service
docs/: README.md  camera.md  cansat_radio_service.md  glossary.md  mission_checklist.md  mission_states.md  mission_triggers.md  planning.md  rpi_pinning.md  secrets.md  servo_tuning.md  zero_logs.md
pico_files/Orginele cansat/: rfm69test_emitter.py  rfm69test_receiver.py
pico_files/Orginele cansat/RadioReceiver/: README_basestation.md  basestation_cli.py  protocol.py  rfm69test_receiver.py  secrets.example.py  tlm_decode.py
scripts/: bme280_test.py  bno055_calibrate.py  bno055_test.py  cansat_radio_protocol.py  decode_logs.py  fetch_zero_logs.sh  fetch_zero_photos.sh  gimbal_level.py  pico_jsonl_to_csv.py  plot_test_csv.py  power_pad_idle.sh  radio_rfm69_test.py  sync_to_zero.sh
scripts/camera/: README.md  apriltag_worker.py  descent_telemetry.py  focus_preview.py  picamera2_bootstrap.py  tag_metrics.py
scripts/gimbal/: README.md  gimbal_test.py  servo_calibration.py  test_axis_response.py  test_bno_rail.py
src/cansat_hw/: __init__.py
src/cansat_hw/camera/: __init__.py  buffer.py  detector.py  hardware.py  registry.py  services.py  thread.py
src/cansat_hw/radio/: __init__.py  rfm69.py  wire_protocol.py
src/cansat_hw/sensors/: __init__.py  sampler.py
src/cansat_hw/sensors/bme280/: __init__.py  device.py
src/cansat_hw/sensors/bno055/: __init__.py  device.py  profile.py
src/cansat_hw/servos/: __init__.py  controller.py  gimbal_loop.py  power_enable.py  state_policy.py
src/cansat_hw/telemetry/: __init__.py  codec.py  log_writer.py
tests/: test_bme280.py  test_bno055.py  test_bno055_profile.py  test_camera_buffer.py  test_camera_detector.py  test_camera_registry.py  test_camera_services.py  test_camera_thread.py  test_gimbal_loop.py  test_log_writer.py  test_pico_jsonl_to_csv.py  test_pico_tlm_decode.py  test_preflight_imu.py  test_sensor_sampler.py  test_servo_controller.py  test_servo_state_policy.py  test_servo_wire.py  test_tag_metrics.py  test_telemetry_codec.py  test_tlm_decode_tool.py  test_wire_protocol.py  test_wire_protocol_camera.py  test_wire_protocol_gimbal.py
tools/: tlm_decode.py
zero_files/: README.md
zero_files/camera_project/: apriltag_worker.py  capture.py  focus_preview.py  mqtt_handler.py  mqtt_supervisor.py  processor.py  sequential_runner.py  tag_metrics.py
