[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cansat-hw"
version = "0.1.0"
description = "Hardware drivers for CanSat mission (Pi Zero 2 W)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "spidev>=3.5",
    "gpiozero>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Op de Pi: RPi.GPIO voor reset; lgpio voor DIO0-wacht (add_event_detect faalt vaak in venv + rpigpio).
rpi = ["RPi.GPIO>=0.7", "lgpio>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]
