[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cansat-hw"
version = "0.1.0"
description = "Hardware drivers for CanSat mission (Pi Zero 2 W)"
readme = "README.md"
requires-python = ">=3.9"
# Geen runtime-deps op project-niveau: alle hardware-stack is Pi-specifiek
# (zie ``[project.optional-dependencies]``). Hierdoor werkt
# ``pip install -e ".[dev]"`` zonder C-extensie-builds op macOS / generieke CI.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Op de Pi: spidev (RFM69 SPI) + gpiozero (reset/DIO0); RPi.GPIO als gpiozero-factory;
# lgpio voor DIO0-wacht (add_event_detect faalt vaak in venv + rpigpio).
rpi = [
    "spidev>=3.5",
    "gpiozero>=2.0",
    "RPi.GPIO>=0.7",
    "lgpio>=0.2",
]
# BME280 (I²C): smbus2 op de Zero; op Mac zonder I²C niet installeren.
sensors = ["smbus2>=0.4.3"]
# Gimbal-scripts (pigpio-Pythonclient + smbus2); op de Pi ook ``sudo apt install pigpio python3-pigpio`` / ``pigpiod``.
gimbal = ["pigpio>=1.78", "smbus2>=0.4.3"]
# Camera-scripts (AprilTag + OpenCV). NumPy <2: apt ``python3-picamera2`` trekt ``simplejpeg`` in dat tegen NumPy 1.x is gebouwd — met NumPy 2 in de venv faalt ``import picamera2``.
# Op de Pi: ``sudo apt install python3-picamera2`` + ``pip install pupil-apriltag`` (import ``apriltag``).
camera = [
	"numpy>=1.22,<2",
	# OpenCV 4.12+ wheels eisen NumPy ≥2; met numpy<2 (nodig voor apt-picamera2/simplejpeg) pinnen we <4.12.
	"opencv-python-headless>=4.8,<4.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
